x.y.z
=====

Release date:

New features:

Bug fixes:

Other:

0.1.0
=====

Release date:

Wed, 26 Feb 2025 08:15:31 +0200

New features:

* Accurate internal timing

* Fully scalable UI

* Cool volume meters like in NoiseTracker

* Easy-to-use track editing

* Poor Man's MIDI Hot-Plug with automatic setup
  - Noteahead notices when a device goes online/offline
  - Noteahead automatically sets channel, bank, and patch

* Send MIDI clock on desired ports

* Tracks with multiple note columns

* Track settings with port, channel, bank, patch, volume, pan, cutoff
  - Can be easily changed on-the-fly via line events

* Track and column-specific velocity scales
  - Effective velocity is the product of track scale, column scale, and note velocity

* Saves to a custom (but open!) XML-based **.nahd** format
