@@ -122,6 +122,8 @@ public:
 
     QString displayNoteAtPosition(const Position & position) const;
     Q_INVOKABLE QString displayNoteAtPosition(size_t patternId, size_t trackIndex, size_t columnId, size_t line) const;
+    using MidiNoteList = std::vector<uint8_t>;
+    Q_INVOKABLE MidiNoteList midiNotesAtPosition(size_t pattern, size_t track, size_t line) const;
     QString displayVelocityAtPosition(const Position & position) const;
     Q_INVOKABLE QString displayVelocityAtPosition(size_t pattern, size_t track, size_t column, size_t line) const;
     Q_INVOKABLE QStringList displayNoteAndVelocityAtPosition(size_t patternId, size_t trackIndex, size_t columnId, size_t line) const;
