@@ -5,6 +5,8 @@ Release date:
 
 New features:
 
+* Implement initial note visualizer on the bottom bar
+
 Bug fixes:
 
 Other:
